# cpp-lcurve

./: CMakeLists.txt  conanfile.txt  configure.ac
include/trm/: lcurve.h
src/: levmarq.cc  light_curve_comp.cc  lprofile.cc  lroche.cc  picture.cc  set_star_grid.cc  trm_lcurve.cc  visualise.cc
